Replace FTop scans with persistent claim cache and manual rebuild